--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form id="contactForm">
+    <form id="contactForm" action="http://localhost:3000/send-email" method="post">
         <div class="space-y-12 px-8 lg:px-48">
             <div class="border-b border-t border-gray-900/10 pb-12">
                 <div class="grid grid-cols-1 sm:grid-cols-6 gap-x-6">
