--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                     <div class="sm:col-span-3">
                         <label for="first-name" class="block text-sm font-medium leading-6 text-gray-900">First
-                            name *</label>
+                            name</label>
                         <div class="mt-2">
                             <input type="text" name="first-name" id="first-name" autocomplete="given-name"
                                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
@@ -49,8 +49,8 @@
                             address</label>
                         <div class="mt-2">
                             <input type="email" id="email" name="email" autocomplete="email"
-       class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6"
-       required>
+                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                                required>
                             <span id="emailError" class="hidden text-sm text-red-600">Invalid email address</span>
 
                         </div>
@@ -84,7 +84,61 @@
         </div>
 
     </form>
-    <script src="/validation.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+    <script>
+        const constraints = {
+            'first-name': { // These should match the name attributes of your form inputs
+                presence: { allowEmpty: false },
+                length: {
+                    minimum: 2
+                }
+            },
+            'last-name': {
+                presence: { allowEmpty: false },
+                length: {
+                    minimum: 2
+                }
+            },
+            email: {
+                presence: { allowEmpty: false },
+                email: true
+            },
+            inquiry: {
+                presence: { allowEmpty: false },
+                length: {
+                    minimum: 5
+                }
+            },
+            tel: { // This is optional, if you want to validate the phone number, add your constraints
+                presence: { allowEmpty: true },
+                // It's optional, so we allow empty
+                // Additional phone constraints can go here if needed
+            }
+        };
+
+        const form = document.getElementById('contactForm'); // Use the correct ID
+        form.addEventListener('submit', function (event) {
+            const formValues = {
+                'first-name': form.elements['first-name'].value,
+                'last-name': form.elements['last-name'].value,
+                email: form.elements.email.value,
+                inquiry: form.elements.inquiry.value,
+                tel: form.elements.tel.value // Optional, include if you're validating
+            };
+
+            const errors = validate(formValues, constraints);
+            if (errors) {
+                event.preventDefault();
+                // This is a basic way to display errors, you might want to customize it
+                let errorMessages = '';
+                for (let field in errors) {
+                    errorMessages += field + ': ' + errors[field] + '\n';
+                }
+                alert(errorMessages);
+            }
+        }, false);
+    </script>
+
 </body>
 
 </html>
