--- a/index.html
+++ b/index.html
@@ -82,26 +82,26 @@
             </div>
         </div>
     </form>
-    <div class="space-y-12 pt-12 px-8 lg:px-48">
-        <h2 class="text-center text-3xl font-semibold leading-6 text-gray-900">Meet the Team</h2>
-        <ul role="list" class="divide-y divide-gray-100">
-            <li class="flex justify-between gap-x-6 py-5">
-                <div class="flex min-w-0 gap-x-4">
-                    <img class="h-12 w-12 flex-none rounded-full bg-gray-50"
+    <div class="pt-12 px-8 lg:px-48">
+        <h2 class="text-center text-2xl font-semibold leading-6 text-gray-900 pb-6">Meet the Team</h2>
+        <ul role="list" class="flex justify-center divide-gray-100 mt-0">
+            <li class="grid sm:grid-cols-2 lg:grid-cols-2 gap-x-48 lg:gap-x-48 py-6">
+                <div class="flex pb-6 sm:pb-0 md:pb-0 lg:pb-0 items-center min-w-0 gap-x-4">
+                    <img class="h-24 w-24 flex-none rounded-full bg-gray-50"
                         src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
                         alt="">
-                    <div class="min-w-0 flex-auto">
-                        <p class="text-sm font-semibold leading-6 text-gray-900">Ben Shawver</p>
-                        <p class="mt-1 truncate text-xs leading-5 text-gray-500">President / CEO</p>
+                    <div class="min-w-0 flex-auto items-center">
+                        <p class="text-md font-semibold leading-6 text-gray-900">Ben Shawver</p>
+                        <p class="mt-1 truncate text-sm leading-5 text-gray-500">President / CEO</p>
                     </div>
                 </div>
-                <div class="flex min-w-0 gap-x-4">
-                    <img class="h-12 w-12 flex-none rounded-full bg-gray-50"
+                <div class="flex items-center gap-x-4">
+                    <img class="h-24 w-24 flex-none rounded-full bg-gray-50"
                         src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
                         alt="">
                     <div class="min-w-0 flex-auto">
-                        <p class="text-sm font-semibold leading-6 text-gray-900">Carol Shawver</p>
-                        <p class="mt-1 truncate text-xs leading-5 text-gray-500">COO</p>
+                        <p class="text-md font-semibold leading-6 text-gray-900">Carol Shawver</p>
+                        <p class="mt-1 truncate text-sm leading-5 text-gray-500">COO</p>
                     </div>
                 </div>
 
