--- a/index.html
+++ b/index.html
@@ -75,39 +75,33 @@
                         </div>
                     </div>
                 </div>
-                <div class="mt-6 flex items-center justify-end gap-x-6">
+                <div class="mt-6 flex items-center justify-start gap-x-6">
                     <button type="submit"
-                        class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Submit</button>
+                        class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Send Inquiry</button>
                 </div>
             </div>
         </div>
     </form>
-    <div class="pt-12 px-8 lg:px-48">
-        <h2 class="text-center text-2xl font-semibold leading-6 text-gray-900 pb-6">Meet the Team</h2>
-        <ul role="list" class="flex justify-center divide-gray-100 mt-0">
-            <li class="grid sm:grid-cols-2 lg:grid-cols-2 gap-x-48 lg:gap-x-48 py-6">
-                <div class="flex pb-6 sm:pb-0 md:pb-0 lg:pb-0 items-center min-w-0 gap-x-4">
-                    <img class="h-24 w-24 flex-none rounded-full bg-gray-50"
-                        src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                        alt="">
-                    <div class="min-w-0 flex-auto items-center">
-                        <p class="text-md font-semibold leading-6 text-gray-900">Ben Shawver</p>
-                        <p class="mt-1 truncate text-sm leading-5 text-gray-500">President / CEO</p>
-                    </div>
-                </div>
-                <div class="flex items-center gap-x-4">
-                    <img class="h-24 w-24 flex-none rounded-full bg-gray-50"
-                        src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                        alt="">
-                    <div class="min-w-0 flex-auto">
-                        <p class="text-md font-semibold leading-6 text-gray-900">Carol Shawver</p>
-                        <p class="mt-1 truncate text-sm leading-5 text-gray-500">COO</p>
-                    </div>
-                </div>
-
-            </li>
-        </ul>
+    <div class="space-y-12 pt-12 px-8 lg:px-48 text-center">
+        <h2 class="text-3xl font-bold mb-10">Meet the Team</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+            <div>
+                <img class="h-32 w-32 mx-auto rounded-full bg-gray-50"
+                    src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                    alt="Ben Shawver">
+                <h3 class="text-xl font-semibold mt-4">Ben Shawver</h3>
+                <p class="text-gray-500">President / CEO</p>
+            </div>
+            <div>
+                <img class="h-32 w-32 mx-auto rounded-full bg-gray-50"
+                    src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                    alt="Carol Shawver">
+                <h3 class="text-xl font-semibold mt-4">Carol Shawver</h3>
+                <p class="text-gray-500">COO</p>
+            </div>
+        </div>
     </div>
+    
     <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
     <script src="validationHelper.js"></script>
 </body>
