--- a/index.html
+++ b/index.html
@@ -78,11 +78,17 @@
                 <div class="mt-6 flex items-center justify-start gap-x-6">
                     <button type="submit"
                         class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Send Inquiry</button>
+                        <p class="flex items-center font-bold">OR</p>
                 </div>
+                
+                <p class="py-6 mt-1 text-sm leading-6 text-gray-600 sm:col-span-3">If you perfer to contact by phone contact us here:</p>
+                <a href="tel:+443-203-8144" class="text-indigo-600 hover:text-indigo-800 transition-colors duration-300">
+                    +1 (443) 203-8114
+                </a>
             </div>
         </div>
     </form>
-    <div class="space-y-12 pt-12 px-8 lg:px-48 text-center">
+    <div class="space-y-12 pt-12 pb-12 px-8 lg:px-48 text-center">
         <h2 class="text-3xl font-bold mb-10">Meet the Team</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
             <div>
