--- a/index.html
+++ b/index.html
@@ -88,18 +88,19 @@
             </div>
         </div>
     </form>
-    <div class="space-y-12 pt-12 pb-12 px-8 lg:px-48 text-center">
-        <h2 class="text-3xl font-bold mb-10">Meet the Team</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
-            <div>
-                <img class="h-32 w-32 mx-auto rounded-full bg-gray-50"
+    <div class="space-y-6 py-12 px-8 lg:px-48">
+        <h2 class="text-3xl font-bold">Meet our Team</h2>
+        <p class="text-lg leading-8 text-gray-600">We are a small, dynamic team, profoundly passionate about what we do. Our guiding principle is a steadfast commitment to quality excellence and placing customer service at the forefront.</p>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+            <div class="flex flex-col items-center">
+                <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50"
                     src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
                     alt="Ben Shawver">
                 <h3 class="text-xl font-semibold mt-4">Ben Shawver</h3>
                 <p class="text-gray-500">President / CEO</p>
             </div>
-            <div>
-                <img class="h-32 w-32 mx-auto rounded-full bg-gray-50"
+            <div class="flex flex-col items-center">
+                <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50"
                     src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
                     alt="Carol Shawver">
                 <h3 class="text-xl font-semibold mt-4">Carol Shawver</h3>
