--- a/index.html
+++ b/index.html
@@ -9,6 +9,77 @@
 </head>
 
 <body>
+    <div class="px-8 lg:px-48">
+        <div class=" py-12 border-t border-gray-900/10 ">
+            <div
+                class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2">
+                <div class="lg:pr-8 lg:pt-4">
+                    <div class="lg:max-w-lg">
+                        <h2 class="text-base font-semibold leading-7 text-indigo-600">Precision Engineering</h2>
+                        <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
+                            Our Services</p>
+                        <p class="mt-6 text-lg leading-8 text-gray-600">We offer 3-axis vertical milling work and can custom design parts specific to your needs. We also have the capability to reverse engineer existing parts you need. Whether it is customized fixturing and workholding for one-off designs or production runs, we’ve got you covered.</p>
+                        <p class="mt-6 text-2xl font-bold tracking-tight text-gray-900 sm:text-2xl">
+                            Current machine capabilities include but are <u>not</u> limited to:</p>
+                        <dl class="mt-10 max-w-xl space-y-8 text-base leading-7 text-gray-600 lg:max-w-none">
+                            <div class="relative pl-9">
+                                <dt class="inline font-semibold text-gray-900">
+                                    <svg class="absolute left-1 top-1 h-5 w-5 text-indigo-600" viewBox="0 0 20 20"
+                                        fill="currentColor" aria-hidden="true">
+                                        <path fill-rule="evenodd"
+                                            d="M5.5 17a4.5 4.5 0 01-1.44-8.765 4.5 4.5 0 018.302-3.046 3.5 3.5 0 014.504 4.272A4 4 0 0115 17H5.5zm3.75-2.75a.75.75 0 001.5 0V9.66l1.95 2.1a.75.75 0 101.1-1.02l-3.25-3.5a.75.75 0 00-1.1 0l-3.25 3.5a.75.75 0 101.1 1.02l1.95-2.1v4.59z"
+                                            clip-rule="evenodd" />
+                                    </svg>
+                                    XYZ.
+                                </dt>
+                                <dd class="inline">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Maiores
+                                    impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis
+                                    ratione.
+                                </dd>
+                            </div>
+                            <div class="relative pl-9">
+                                <dt class="inline font-semibold text-gray-900">
+                                    <svg class="absolute left-1 top-1 h-5 w-5 text-indigo-600" viewBox="0 0 20 20"
+                                        fill="currentColor" aria-hidden="true">
+                                        <path fill-rule="evenodd"
+                                            d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z"
+                                            clip-rule="evenodd" />
+                                    </svg>
+                                    Power.
+                                </dt>
+                                <dd class="inline">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure
+                                    qui
+                                    lorem cupidatat commodo.</dd>
+                            </div>
+                            <div class="relative pl-9">
+                                <dt class="inline font-semibold text-gray-900">
+                                    <svg class="absolute left-1 top-1 h-5 w-5 text-indigo-600" viewBox="0 0 20 20"
+                                        fill="currentColor" aria-hidden="true">
+                                        <path
+                                            d="M4.632 3.533A2 2 0 016.577 2h6.846a2 2 0 011.945 1.533l1.976 8.234A3.489 3.489 0 0016 11.5H4c-.476 0-.93.095-1.344.267l1.976-8.234z" />
+                                        <path fill-rule="evenodd"
+                                            d="M4 13a2 2 0 100 4h12a2 2 0 100-4H4zm11.24 2a.75.75 0 01.75-.75H16a.75.75 0 01.75.75v.01a.75.75 0 01-.75.75h-.01a.75.75 0 01-.75-.75V15zm-2.25-.75a.75.75 0 00-.75.75v.01c0 .414.336.75.75.75H13a.75.75 0 00.75-.75V15a.75.75 0 00-.75-.75h-.01z"
+                                            clip-rule="evenodd" />
+                                    </svg>
+                                    Database backups.
+                                </dt>
+                                <dd class="inline">Ac tincidunt sapien vehicula erat auctor pellentesque
+                                    rhoncus. Et
+                                    magna sit morbi lobortis.</dd>
+                            </div>
+                        </dl>
+                    </div>
+                </div>
+                <!-- <img src="https://tailwindui.com/img/component-images/dark-project-app-screenshot.png"
+                        alt="Product screenshot"
+                        class="w-[48rem] max-w-none rounded-xl shadow-xl ring-1 ring-gray-400/10 sm:w-[57rem] md:-ml-4 lg:-ml-0"
+                        width="2432" height="1442"> -->
+            </div>
+        </div>
+    </div>
+
+    <!-- Form Start -->
     <form id="contactForm" action="http://localhost:3000/send-email" method="post">
         <div class="space-y-12 px-8 lg:px-48">
             <div class="border-b border-t border-gray-900/10 pb-12">
@@ -77,12 +148,15 @@
                 </div>
                 <div class="mt-6 flex items-center justify-start gap-x-6">
                     <button type="submit"
-                        class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Send Inquiry</button>
-                        <p class="flex items-center font-bold">OR</p>
+                        class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Send
+                        Inquiry</button>
+                    <p class="flex items-center font-bold">OR</p>
                 </div>
-                
-                <p class="py-6 mt-1 text-sm leading-6 text-gray-600 sm:col-span-3">If you perfer to contact by phone contact us here:</p>
-                <a href="tel:+443-203-8144" class="text-indigo-600 hover:text-indigo-800 transition-colors duration-300">
+
+                <p class="py-6 mt-1 text-sm leading-6 text-gray-600 sm:col-span-3">If you perfer to contact by phone
+                    contact us here:</p>
+                <a href="tel:+443-203-8144"
+                    class="text-indigo-600 hover:text-indigo-800 transition-colors duration-300">
                     +1 (443) 203-8114
                 </a>
             </div>
@@ -90,7 +164,9 @@
     </form>
     <div class="space-y-6 py-12 px-8 lg:px-48">
         <h2 class="text-3xl font-bold">Meet our Team</h2>
-        <p class="text-lg leading-8 text-gray-600">We are a small, dynamic team, profoundly passionate about what we do. Our guiding principle is a steadfast commitment to quality excellence and placing customer service at the forefront.</p>
+        <p class="text-lg leading-8 text-gray-600">We are a small, dynamic team, profoundly passionate about what we do.
+            Our guiding principle is a steadfast commitment to quality excellence and placing customer service at the
+            forefront.</p>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
             <div class="flex flex-col items-center">
                 <img class="mt-6 h-32 w-32 mx-auto rounded-full bg-gray-50"
@@ -108,7 +184,7 @@
             </div>
         </div>
     </div>
-    
+
     <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
     <script src="validationHelper.js"></script>
 </body>
