--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
                 class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2">
                 <div class="lg:pr-8 lg:pt-4">
                     <div class="lg:max-w-lg">
-                        <h2 class="text-base font-semibold leading-7 text-indigo-600">Precision Engineering</h2>
+                        <h2 class="text-base font-semibold leading-7 text-primarydark">Precision Engineering</h2>
                         <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
                             Our Services</p>
-                        <p class="mt-6 text-lg leading-8 text-gray-600">We offer 3-axis vertical milling work and can custom design parts specific to your needs. We also have the capability to reverse engineer existing parts you need. Whether it is customized fixturing and workholding for one-off designs or production runs, we’ve got you covered.</p>
+                        <p class="mt-6 text-lg leading-8 text-gray-600">We offer 3-axis vertical milling work and can
+                            custom design parts specific to your needs. We also have the capability to reverse engineer
+                            existing parts you need. Whether it is customized fixturing and workholding for one-off
+                            designs or production runs, we’ve got you covered.</p>
                         <p class="mt-6 text-2xl font-bold tracking-tight text-gray-900 sm:text-2xl">
                             Current machine capabilities include but are <u>not</u> limited to:</p>
                         <dl class="mt-10 max-w-xl space-y-8 text-base leading-7 text-gray-600 lg:max-w-none">
@@ -100,7 +103,7 @@
                             name</label>
                         <div class="mt-2">
                             <input type="text" name="first-name" id="first-name" autocomplete="given-name"
-                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6"
                                 required>
                         </div>
                     </div>
@@ -110,7 +113,7 @@
                             name</label>
                         <div class="mt-2">
                             <input type="text" name="last-name" id="last-name" autocomplete="family-name"
-                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6"
                                 required>
                         </div>
                     </div>
@@ -120,7 +123,7 @@
                             address</label>
                         <div class="mt-2">
                             <input type="email" id="email" name="email" autocomplete="email"
-                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-primary sm:text-sm sm:leading-6"
                                 required>
                             <span id="emailError" class="hidden text-sm text-red-600">Invalid email address</span>
 
@@ -132,7 +135,7 @@
                             (Optional)</label>
                         <div class="mt-2">
                             <input id="tel" name="tel" type="tel" autocomplete="tel"
-                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6">
                         </div>
                     </div>
 
@@ -141,22 +144,21 @@
                             Inquiry</label>
                         <div class="mt-2">
                             <textarea id="inquiry" name="inquiry" rows="3"
-                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6"
                                 required></textarea>
                         </div>
                     </div>
                 </div>
                 <div class="mt-6 flex items-center justify-start gap-x-6">
                     <button type="submit"
-                        class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Send
+                        class="rounded-md bg-primary px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-primarylight focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Send
                         Inquiry</button>
                     <p class="flex items-center font-bold">OR</p>
                 </div>
 
                 <p class="py-6 mt-1 text-sm leading-6 text-gray-600 sm:col-span-3">If you perfer to contact by phone
                     contact us here:</p>
-                <a href="tel:+443-203-8144"
-                    class="text-indigo-600 hover:text-indigo-800 transition-colors duration-300">
+                <a href="tel:+443-203-8144" class="text-primary hover:text-primarydark transition-colors duration-300">
                     +1 (443) 203-8114
                 </a>
             </div>
