--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="px-8 lg:px-48">
+    <div class="px-8 lg:px-48 sm:overflow-hidden">
         <div class="py-12 border-t border-gray-900/10 ">
             <div
                 class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 lg:gap-x-0 gap-y-12 sm:gap-y-12 lg:mx-0 lg:max-w-none lg:grid-cols-2">
@@ -100,7 +100,7 @@
             <div class="border-b border-t border-gray-900/10 pb-12">
                 <div class="grid grid-cols-1 sm:grid-cols-6 gap-x-6">
                     <div class="sm:col-span-3 lg:col-span-3">
-                        <h2 class="text-base font-semibold leading-7 text-gray-900 pt-12">Contact Us</h2>
+                        <h2 class="text-base font-semibold text-xl leading-7 text-gray-900 pt-12">Contact Us</h2>
                         <!-- Use col-span-3 at larger screen sizes to make the paragraph take up half the grid -->
                         <p class="mt-1 text-sm leading-6 text-gray-600 sm:col-span-3">Complete and submit the contact
                             form below to
@@ -178,7 +178,7 @@
     </form>
 
     <div class="space-y-6 py-12 px-8 lg:px-48">
-        <div class="mx-auto max-w-7xl xl:grid xl:grid-cols-3 gap-6">
+        <div class="mx-auto max-w-none xl:grid xl:grid-cols-3 gap-6">
             <div class="col-span-1 flex flex-col justify-start">
                 <h2 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-3xl">Meet our Team</h2>
                 <p class="mt-6 pb-6 text-lg leading-8 text-gray-600">We are a small, dynamic team, profoundly passionate
