extra border removed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="px-8 lg:px-24 sm:overflow-hidden">
         <div class="py-12">
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 ">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="md:col-span-1 flex flex-col items-center justify-center">
                         <div class="md:col-span-3 hidden sm:hidden md:flex lg:flex">
                             <img src="images/part.jpg" alt="Machine Part" class="w-full max-w-sm md:max-w-md rounded-xl shadow-lg" />
@@ -141,7 +141,7 @@
 
     <!-- How to Work with Us -->
     <div class="px-8 lg:px-48 sm:overflow-hidden">
-        <div class="py-12 border-b border-t border-gray-900/10 flex justify-center items-center">
+        <div class="py-12 border-t border-gray-900/10 flex justify-center items-center">
             <div class="w-full lg:max-w-lg flex justify-center items-center flex-col text-center">
                 <h2 class="text-base font-semibold leading-7 text-primary">Need Parts?</h2>
                 <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
